# bdotmap

./: .gitignore  README.md  pyproject.toml
betterdotmap/: __init__.py  better_dotmap.py
tests/: test_betterdotmap.py
